--- a/css/style.css
+++ b/css/style.css
@@ -236,12 +236,14 @@ body{
   .mySwiper2 {
     width: 100%;
     border-radius: 10px;
+    overflow: hidden;
   }
 
   .mySwiper {
     height: 20%;
     box-sizing: border-box;
     padding: 10px 0;
+    overflow: hidden;
   }
 
   .mySwiper .swiper-slide {
